--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>FirstDemo</groupId>
-    <artifactId>FirstDemo</artifactId>
+    <groupId>SeleniumWebDriverDemo</groupId>
+    <artifactId>SeleniumWebDriverDemo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <properties>
         <testng.version>6.8.21</testng.version>
